--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -128,7 +128,7 @@
   background-color: rgb(169, 224, 209);
   width: 0;
   height: 100%;
-  transition: all 0.5s ease-out;
+  transition: all 0.3s ease-out;
   @include display-center;
   align-items: center;
   border-top-right-radius: 20px;
@@ -139,6 +139,11 @@
     color: white;
     opacity: 0;
   }
+}
+
+.card-menu-infos > p {
+  width: 250px;
+  transition: all 0.5s ease;
 }
 
 .card-menu:hover {
